# GamblingNow

./: LICENSE  README.md
backend/: .gitignore  main.py  pyproject.toml
frontend/: README.md  package.json
frontend/src/: App.vue
